Make project executable in 2026